# grader-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  alembic_autogenerate.py  make-config.env  mk_passwd.py  pyproject.toml  requirements.txt  start.py
.github/workflows/: build-push-dev-image.yml  build-push-release.yml  code-checks.yml  trivy-pr-scan.yml
alembic/: env.py
alembic/versions/: 00231e6c6d18_create_static_role_permission_role_.py  0845bee5c145_replace_fork_remote_url_with_fork_cloned.py  0babbb4e741d_rename_user_table_since_user_is_a_.py  27622169eb7d_change_user_role_id_foreign_key_to_a_.py  27de6f56da90_add_notebook_revision_table.py  328762b3fddd_add_back_fork_remote_url_to_student_for_.py  38c44ed382f8_add_join_date_and_exit_date_to_student_.py  395f7e014eef_add_grade_report_table.py  3cfe0b27d860_create_assignment_override_table.py  47a490565a48_make_user_role_required_and_user_email_.py  4e5e958c939f_remove_user_roles_permissions_in_.py  52699a7250ae_add_email_password_fields_to_student_.py  5d464f430f43_add_job_logging_table.py  675a2d5b61b4_add_student_fork_remote_url_field_to_.py  6bef426b477e_add_instructors_table_remove_professor_.py  6d647b5d5baa_change_user_role_permission_association_.py  7aa83f25debb_update_user_table_to_have_name_and_not_.py  81b093623398_add_published_column_to_assignments_.py  8c934aeb6c1e_create_assignment_override_table.py  (+11 more)
app/: main.py
base-image/: Dockerfile  Makefile  make-config.env
scripts/: setup_course.py  setup_instructor.py  setup_wizard.py
tests/: logger_test.py  test_api.py
(+170 files in other folders)
