[project]
name = "grader-api"
version = "v1.1.3"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic (>=1.8.1,<2.0.0)",
    "bcrypt (>=4.0.1,<5.0.0)",
    "fastapi (>=0.99.0,<0.100.0)",
    "uvicorn (>=0.22.0,<0.23.0)",
    "sqlalchemy (>=2.0.17,<3.0.0)",
    "psycopg2 (>=2.9.6,<3.0.0)",
    "pydantic (>=1.10.10,<2.0.0)",
    "starlette (>=0.27.0,<0.28.0)",
    "fastapi-pagination (>=0.12.5,<0.13.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.8.0,<3.0.0)",
    "kubernetes (>=26.1.0,<27.0.0)",
    "httpx (>=0.27.0,<1)",
    "pytest (>=7.4.2,<8.0.0)",
    "pytest-mock (>=3.11.1,<4.0.0)",
    "loguru (>=0.4.1,<0.5.0)",
    "ldap3 (>=2.9,<3.0)",
    "pandas (>=2.2.2,<3.0.0)",
    "python-multipart (>=0.0.9,<0.0.10)",
    "otter-grader (>=5.5.0,<6.0.0)",
    "python-dateutil (>=2.9.0,<3.0.0)",
    "numpy (>=2.0.0,<3.0.0)",
    "fastapi-events (>=0.11.1,<0.12.0)",
    "jupyter-server (>=2.15.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "nbconvert (>=7.8.0,<8.0.0)",
    "eduhelx-utils @ git+https://github.com/helxplatform/eduhelx-utils.git"
]

[tool.poetry]
packages = [{ include = "app" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

